2009-01-20  Martin Leidig  <mleidig@schlund.de>

	* src/org/pustefixframework/config/contextxmlservice/parser/internal/ContextConfigImpl.java:
	check if class is AOP enhanced and use superclass to retrieve Context
	properties (fixes ContextResource properties bug)
	* res/META-INF/org/pustefixframework/config/context-xml-service/parser/context-xml-service-config.xml:
	added customization support for pagerequest, resource and general
	properties by adding according matching rules

2009-01-14  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/serverutil/SessionAdmin.java: added static
	method retrieveExternalSessionId() and removed getInstance()

2009-01-14  Martin Leidig  <mleidig@schlund.de>

	Replaced maven-ant-tasks to version which supports uniqueVersion for
	snapshots. Don't use the newest version 2.0.9 because of problem with
	deployment using scpexe.

	* build-maven.xml: Change maven-ant-tasks version
	* lib/maven-ant-tasks-2.0.7.jar: Removed
	* lib/maven-ant-tasks-2.0.8.jar: Added

2009-01-13  Martin Leidig  <mleidig@schlund.de>

	Re-added getCurrentPageFlow() method for backwards compatibility and
	easier migration. But marked it as deprecated and added warning
	pointing out changed behaviour.

	* src/org/pustefixframework/test/MockContext.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/workflow/Context.java

2009-01-12  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.13.4

2009-01-12  Martin Leidig  <mleidig@schlund.de>

	Implement perflogging using AspectJ. Thus the core framework is
	independent of the perflogging stuff. Applications which want to do
	perflogging are recommended to use AOP too. They can use the
	CorePerfLoggingAspect to log the core performance data and add their
	own aspects based on the perflogging API.
	The aspect isn't added at compile time because the perflogging